--- a/mapLondon.html
+++ b/mapLondon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Map lib example</title>
+    <title>London transport: Good for you, good for the planet</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -20,8 +20,12 @@
 
 <body>
 
-<div id="header" class="vizHeader"><div style="padding:5px 0px 0px 15px;">London Transport: Good for you, good for the planet</div></div>
-<!--<div id="logo" class="logo"><img src="img/logo.png" width="150"></div>-->
+<div id="header" class="vizHeader">
+    <div style="padding:5px 0px 0px 15px; float:left;">
+        London Transport: Good for you, good for the planet
+    </div>
+    <div style="float:right;padding: 5px 15px 0 0;"><a href="about.html" style="color:white;">About</a></div>
+</div>
 <div id="map" class="map"></div>
 
 <script type="text/javascript">
