--- a/mapLondon.html
+++ b/mapLondon.html
@@ -2,37 +2,28 @@
 <html>
 <head>
     <title>London transport: Good for you, good for the planet</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
     <link rel="stylesheet" href="css/mapLondon.css" />
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700,900' rel='stylesheet' type='text/css'>
-     <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js" charset="utf-8"></script>
-     <script src="js/3rdparty/jquery.js" charset="utf-8"></script>
-     <script src="http://maps.stamen.com/js/tile.stamen.js?v1.2.2" charset="utf-8"></script>
-     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-     <script src="js/controller/mapControllerLondon.js" charset="utf-8"></script>
-     <script src="js/viz/mapVizLondon.js" charset="utf-8"></script>
-
-
+    <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js" charset="utf-8"></script>
+    <script src="js/3rdparty/jquery.js" charset="utf-8"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDzpiQVwEWYi1JXp81UTPv2ObSdkLqwiQI&sensor=false" type="text/javascript" charset="utf-8"></script>
+    <script src="http://maps.stamen.com/js/tile.stamen.js?v1.2.2" charset="utf-8"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="js/controller/mapControllerLondon.js" charset="utf-8"></script>
+    <script src="js/viz/mapVizLondon.js" charset="utf-8"></script>
 </head>
-
 <body>
-
-<div id="header" class="vizHeader">
-    <div style="padding:5px 0px 0px 15px; float:left;">
+  <div id="header" class="vizHeader">
+      <div style="padding:5px 0px 0px 15px; float:left;">
         London Transport: Good for you, good for the planet
-    </div>
-    <div style="float:right;padding: 5px 15px 0 0;"><a href="about.html" style="color:white;">About</a></div>
-</div>
-<div id="map" class="map"></div>
-
-<script type="text/javascript">
-
-
+      </div>
+      <div style="float:right;padding: 5px 15px 0 0;"><a href="about.html" style="color:white;">About</a></div>
+  </div>
+  <div id="map" class="map"></div>
+  <script type="text/javascript">
     // Controller object
-
     self.mapObj = tdviz.controller.mapController(
         {
             'idName':"map",
@@ -53,12 +44,6 @@
             'attributionText':'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2011 CloudMade',
             'debugLevel':4
         });
-
-
-
-</script>
-
-
+  </script>
 </body>
-
 </html>
