--- a/mapLondon.html
+++ b/mapLondon.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700,900' rel='stylesheet' type='text/css'>
     <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js" charset="utf-8"></script>
     <script src="js/3rdparty/jquery.js" charset="utf-8"></script>
+    <script src="js/3rdparty/moment.min.js" charset="utf-8"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDzpiQVwEWYi1JXp81UTPv2ObSdkLqwiQI&sensor=false" type="text/javascript" charset="utf-8"></script>
     <script src="http://maps.stamen.com/js/tile.stamen.js?v1.2.2" charset="utf-8"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
