london da-ta unindented

--- a/mapLondon.html
+++ b/mapLondon.html
@@ -32,7 +32,7 @@
             'baseJUrl':"data/",
             'imgPath':"img/",
             'lsoasFile': 'LSOASDef.json',
-            'londonFile': 'finalLondonData.json',
+            'londonFile': 'finalLondonDataUI.json',
             'apiKey': '4a708528dd0e441da7e211270da4dd33',
 //            'mapStyle': '22677',
             'mapStyle': '998',
