Added about.html and target blank from index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div style="padding:5px 0px 0px 15px; float:left;">
         London Transport: Good for you, good for the planet
       </div>
-      <div style="float:right;padding: 12px 15px 0 0;font-size:18px;"><a href="about.html" style="color:white;">About</a></div>
+      <div style="float:right;padding: 12px 15px 0 0;font-size:18px;"><a href="about.html" style="color:white;" target="_blank">About</a></div>
   </div>
   <div id="map" class="map"></div>
   <script type="text/javascript">
