--- a/about.html
+++ b/about.html
@@ -17,22 +17,22 @@
   <div class="aboutContent">
       <h1>About</h1>
             <p>"London Transport: Good for you, good for the planet" aims to change to way traditional intra-city trip planning applications work, by taking into account the trip average pollution, estimated crowd factor and crime data. This way, the planning is not solely focused on "travel distance" (efficiency), but also on travel sustainability and security.</p>
-            <p> Also, we calculate CO2 footprint for every modality and the economic "footprint" it will also generate. The first metric is translated into annual trees needed to absorb the CO2 footprint if this trip. The second one (economic) is translated into annual British Pounds that must be spended (on behalf of the user and also the city) to support a whole year of daily trips like the one the user created</p>
-            <p>As a side functionality, you can also watch London map under three perspective (heatmaps):</p>
+            <p> Also, we calculate CO2 footprint for every modality and the economic "footprint" it will also generate. The first metric is translated into annual trees needed to absorb the CO2 footprint in this trip. The second one (economic) is translated into annual British Pounds that must be spended (on behalf of the user and also the city) to support a whole year of daily trips like the one the user created</p>
+            <p>As a side functionality, you can also watch London map under three perspectives (heatmaps):</p>
             <ul>
-            <li>London crowding view (at the typical hour / day selected)</li>
-            <li>London crime rate</li>
-            <li>London pollution rate</li>
+            <li>London <strong>crowding view</strong> (at the typical hour / day selected on the options panels,so you can explore the movements on the city)</li>
+            <li>London <strong>crime rate</strong></li>
+            <li>London <strong>pollution rate</strong></li>
             </ul>
             <p>This project has been implemented at the "Datathon for Social Good" http://dynamicinsights.telefonica.com/962/using-big-data-for-social-good, held between 2-6th September 2013</p>
       <h1>Who made this?</h1>
         <ul>
-            <li>Susana Ferreras, Data Scientist at Telefónica Digital</li>
-            <li>Alberto Martín Dominguez, Data Scientist at Telefónica Digital</li>
-            <li>Alberto González Paje, Data Analyst at Bestiario</li>
-            <li>Alejandro González Díez, Data Engineer at Outliers Collective</li>
-            <li>Rubén Abad Agulló, Data Engineer at Outliers Collective</li>
-            <li>Óscar Marín Miró, Data Engineer at Outliers Collective</li>
+            <li><strong>Susana Ferreras</strong>, Data Scientist at Telefónica Digital</li>
+            <li><strong>Alberto Martín Dominguez</strong>, Data Scientist at Telefónica Digital</li>
+            <li><strong>Alberto González Paje</strong>, Data Analyst at Bestiario</li>
+            <li><strong>Alejandro González Díez</strong>, Data Engineer at Outliers Collective</li>
+            <li><strong>Rubén Abad Agulló</strong>, Data Engineer at Outliers Collective</li>
+            <li><strong>Óscar Marín Miró</strong>, Data Engineer at Outliers Collective</li>
          </ul>
       <h1>Where's the data?</h1>
 
