--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       </div>
   </div>
   <div class="aboutContent">
-      <h1>About</h1>
+      <h1>About the Project</h1>
             <p>"London Transport: Good for you, good for the planet" aims to change to way traditional intra-city trip planning applications work, by taking into account the trip average pollution, estimated crowd factor and crime data. This way, the planning is not solely focused on "travel distance" (efficiency), but also on travel sustainability and security.</p>
             <p> Also, we calculate CO2 footprint for every modality and the economic "footprint" it will also generate. The first metric is translated into annual trees needed to absorb the CO2 footprint in this trip. The second one (economic) is translated into annual British Pounds that must be spended (on behalf of the user and also the city) to support a whole year of daily trips like the one the user created</p>
             <p>As a side functionality, you can also watch London map under three perspectives (heatmaps):</p>
@@ -86,7 +86,7 @@
         <li><strong>Google maps API</strong> for trip planning</li>
     </ul>
 <h1>Contact</h1>
-      <p>If you have any comments, please do not hesitate to contact us at outliers [at..] outliers.es</p>
+      <p>If you have any comments, please do not hesitate to contact us here: spain.analytics.team [at..] gmail.com</p>
 
   </div>
 
