--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <li>London <strong>crime rate</strong></li>
             <li>London <strong>pollution rate</strong></li>
             </ul>
-            <p>This project has been implemented at the "Datathon for Social Good" http://dynamicinsights.telefonica.com/962/using-big-data-for-social-good, held between 2-6th September 2013</p>
+            <p>This project has been implemented at the <a href="http://dynamicinsights.telefonica.com/962/using-big-data-for-social-good" target="_blank">"Datathon for Social Good"</a>, held between 2-6th September 2013</p>
       <h1>Who made this?</h1>
         <ul>
             <li><strong>Susana Ferreras</strong>, Data Scientist at Telefónica Digital</li>
